Fix scrolling effect on Firefox browser (#6)
* Add link to home page

* Revert linking to home page

* Change height to address scrolling effect on firefox

--- a/css/home.css
+++ b/css/home.css
@@ -144,7 +144,9 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  height: 76%;
   margin-bottom: 50px;
+  overflow-y: hidden;
 }
 
 .footer img {
@@ -210,6 +212,7 @@
   color: #272a31;
   font-size: 16px;
   line-height: 20px;
+  padding: 5px 0;
 }
 
 .talks .more {
@@ -415,7 +418,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 80%;
     margin-bottom: 50px;
   }
 
